--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
         <div class="imagenes-en-fila">
             <div>
-                <a href="#" target="_blank">
+                <a href="https://www.google.com.mx/maps/place/Parroquia+de+San+Francisco+de+Asis+en+Cueramaro+Guanajuato/@20.626632,-101.67179,20z/data=!4m6!3m5!1s0x842c74f21afbd4df:0xadff208c6c58b9a2!8m2!3d20.6267029!4d-101.6720233!16s%2Fg%2F1tgm35js?entry=ttu&g_ep=EgoyMDI1MDIxMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">
                     <img src="images/parroquia.png" alt="Ubicación de la Parroquia de San Francisco">
                 </a>
                 <h3>Misa</h3>
@@ -145,7 +145,7 @@
                 <p>Cuerámaro, Guanajuato</p>
             </div>
             <div>
-                <a href="#" target="_blank">
+                <a href="https://www.google.com.mx/maps/place/Salon+La+Cascada/@20.6214463,-101.6869444,15.75z/data=!4m6!3m5!1s0x842c758994b546a5:0x6f332b66f57be04d!8m2!3d20.6172741!4d-101.6827611!16s%2Fg%2F11gn229zc3?entry=ttu&g_ep=EgoyMDI1MDIxMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">
                     <img src="images/ubicacion.png" alt="Ubicación del Salón La Cascada">
                 </a>
                 <h3>Recepción</h3>
