--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
             margin-bottom: 20px;
         }
         h2 {
-            font-size: 1.8rem;
-            color: #003366;
+            font-family: 'Dancing Script', cursive;/* Aplicar fuente especial */
+            font-size: 36px;
+            color: #6d1bd8; /* Color rosado elegante */
+            margin-bottom: 20px;
         }
         p {
             font-size: 1.2rem;
