--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
             min-height: 100vh;
             background-image: url('images/fondo7.png');
         }
+        @media (max-width: 768px) {
+        body {
+            background-attachment: scroll; /* Quita el efecto de "fijado" */
+            background-position: top center; /* Asegura que el fondo esté alineado con la parte superior */
+            }
+        }
         
         .container {
             width: 80%;
