--- a/index.html
+++ b/index.html
@@ -1675,10 +1675,10 @@
             <h2>Galería de Recuerdos</h2>
             <div class="galeria">
                 <img src="images/foto1.JPG" alt="Foto 1" onclick="abrirModal(this.src)">
-                <img src="images/foto2.jpg" alt="Foto 2" onclick="abrirModal(this.src)">
-                <img src="images/foto3.jpg" alt="Foto 3" onclick="abrirModal(this.src)">
-                <img src="images/foto4.jpg" alt="Foto 4" onclick="abrirModal(this.src)">
-                <img src="images/foto5.jpg" alt="Foto 5" onclick="abrirModal(this.src)">
+                <img src="images/foto2.JPG" alt="Foto 2" onclick="abrirModal(this.src)">
+                <img src="images/foto3.JPG" alt="Foto 3" onclick="abrirModal(this.src)">
+                <img src="images/foto4.JPG" alt="Foto 4" onclick="abrirModal(this.src)">
+                <img src="images/foto5.JPG" alt="Foto 5" onclick="abrirModal(this.src)">
                 <img src="images/foto6.JPG" alt="Foto 6" onclick="abrirModal(this.src)">
             </div>
 
