--- a/index.html
+++ b/index.html
@@ -1550,7 +1550,7 @@
                         
                         <div class="parent-separator">♥</div>
                         
-                        <div class="parent-name">Juana Domingo Hernandez </div>
+                        <div class="parent-name">Juana Domingo Hernández </div>
                         <div class="parent-role">Madrina</div>
                     </div>
                 </div>
