--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         }
         
         h2 {
-            font-family: 'Merriweather',  serif; /* Parisienne es más elegante */
+            font-family: 'Dancing Script', cursive; /* Parisienne es más elegante */
             font-size: 3rem; /* Aumenté el tamaño (antes era 2.2rem) */
             margin-top: 10px; /* Reduje el margen superior */
             color: var(--azul-rey); /* Usé el azul más oscuro para más elegancia */
